fixed for wcm on mobile

--- a/src/css/project.less
+++ b/src/css/project.less
@@ -49,6 +49,15 @@ svg {
   }
 }
 
+.mobile-instruct {
+  font-size: 12px;
+  padding-top: 10px;
+  display: none;
+  @media @mobile {
+    display: block;
+  }
+}
+
 .legend-container {
   font-size: 12px;
   font-family: @block-graphics;
